# axum_workshop

./: .env  Cargo.toml  README.md
src/: main.rs
src/services/: handlers.rs  payloads.rs
