[package]
name = "axum_workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# JSON Handling
serde = { version = "1.0.210", features = ["derive"] }

# Axum
axum = "0.7.6"
tokio = { version = "1.36.0", features = ["full"] }

# Environment variables
dotenvy = "0.15.7"

# Errors
eyre = "0.6.12"

#Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
